service-mesh/istio-ingress/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    app.kubernetes.io/component: istio-ingress
    istio-injection: enabled
